[package]
name = "mobius-applicatio"
version = "0.1.0"
edition = "2021"
authors = ["ConociendoAlmasMenosHastiadas"]
license = "MIT OR Apache-2.0"
description = "A lean library for Möbius transformations on the complex plane"
repository = "https://github.com/ConociendoAlmasMenosHastiadas/mobious-applicatio"
keywords = ["mobius", "complex", "transformation", "fractals", "mathematics"]
categories = ["mathematics", "science"]
readme = "README.md"

[dependencies]
num-complex = "0.4"
ndarray = "0.17"
ndarray-linalg = "0.18"

[dev-dependencies]
# GUI dependencies only used for examples and tests
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"

[[example]]
name = "visualize"
path = "examples/visualize.rs"
